--- a/css/index.css
+++ b/css/index.css
@@ -141,7 +141,7 @@ nav{
     margin-top: 22px;
 }
 .nav{
-    width: 620px;
+    width: 690px;
     height: 100px;
     background: #ffffff;
     float: left;
@@ -408,6 +408,40 @@ li:hover{
     float: right;
     margin-top: 25px;
     border: 1px solid #b0b0ac;
+    position: relative;
+}
+.pull{
+    width: 243px;
+    height: 300px;
+    background: #fff;
+    border: 1px solid #ff6700;
+    position: absolute;
+    top: 50px;
+    left: 0;
+    z-index: 999;
+    display: none;
+}
+.history{
+    width: 100%;
+    height: 29px;
+}
+.history:hover{
+    background: #f5f5f5;
+    cursor: pointer;
+}
+.names{
+    font-size: 11px;
+    color: #424242;
+    line-height: 29px;
+    float: left;
+    margin-left: 14px;
+}
+.count{
+    font-size: 11px;
+    color: #b0b0b0;
+    line-height: 29px;
+    float: right;
+    margin-right: 15px;
 }
 .search-left{
     width: 245px;
@@ -418,9 +452,11 @@ li:hover{
 }
 .user{
     width: 245px;
-    height: 47px;
+    height: 50px;
     outline:none;
     border: none;
+    padding-left: 10px;
+    box-sizing: border-box;
 }
 .search-right{
     width: 50px;
@@ -428,7 +464,9 @@ li:hover{
     background: #ffffff;
     float: right;
     border-left: 1px solid #b0b0ac;
-    position: relative;
+    position: absolute;
+    top: 0;
+    right: 0;
 }
 .search-right:hover{
     background: #ff6700;
